# pulp

./: .gitignore  LICENSE  README.md  latex.boring  latex.hs  plastic-board.cabal  plastic-board.hs  pulp.cabal  pulp.hs
Text/: Pulp.hs
hcar/: pulp-Dp.tex  pulp.log.pulp  pulp.tex
lib/Text/: Pulp.hs
tests/: 0a24c67e674383a66ecfaf65333d5d9ab998c69c-1.out  0a24c67e674383a66ecfaf65333d5d9ab998c69c-2.out  0a24c67e674383a66ecfaf65333d5d9ab998c69c-3.out  0b4f89d0a3b8fc4232452a35a8fb78f61348fe6f-1.out  0b4f89d0a3b8fc4232452a35a8fb78f61348fe6f-2.out  0b4f89d0a3b8fc4232452a35a8fb78f61348fe6f-3.out  1232c0a0537e6993380365cf1b7d104478a5eb3c-1.out  1232c0a0537e6993380365cf1b7d104478a5eb3c-2.out  1232c0a0537e6993380365cf1b7d104478a5eb3c-3.out  1b2325f489f6fff9eb23184c9df37feea0ee56a9-1.out  1b2325f489f6fff9eb23184c9df37feea0ee56a9-2.out  1b2325f489f6fff9eb23184c9df37feea0ee56a9-3.out  23fd2112e008420fa9e0bfc97c31c86fe3337ffc-1.out  23fd2112e008420fa9e0bfc97c31c86fe3337ffc-2.out  23fd2112e008420fa9e0bfc97c31c86fe3337ffc-3.out  349932014eec68e6c008f060e8ed470bff3bc3cd-1.out  349932014eec68e6c008f060e8ed470bff3bc3cd-2.out  349932014eec68e6c008f060e8ed470bff3bc3cd-3.out  386f6f0f3072ab84bdd708837fda003558a8dc83-1.out  386f6f0f3072ab84bdd708837fda003558a8dc83-2.out  386f6f0f3072ab84bdd708837fda003558a8dc83-3.out  4741f5bfb52854f60c4743d8572b8939f7e2f641-1.out  4741f5bfb52854f60c4743d8572b8939f7e2f641-2.out  4741f5bfb52854f60c4743d8572b8939f7e2f641-3.out  6cb3c284a8231efe81db6460cb68813d8ab80275-1.out  6cb3c284a8231efe81db6460cb68813d8ab80275-2.out  6cb3c284a8231efe81db6460cb68813d8ab80275-3.out  7d2742b0ff5122448be7c642e1580c7ca7501495-1.out  7d2742b0ff5122448be7c642e1580c7ca7501495-2.out  7d2742b0ff5122448be7c642e1580c7ca7501495-3.out  9119191e79b0a96e40134c2b9c06c71e8c2726d9-1.out  9119191e79b0a96e40134c2b9c06c71e8c2726d9-2.out  9119191e79b0a96e40134c2b9c06c71e8c2726d9-3.out  Regression.hs  a400bf6638547febb1dc69ccd16c5414d5210ea2-1.out  a400bf6638547febb1dc69ccd16c5414d5210ea2-2.out  a400bf6638547febb1dc69ccd16c5414d5210ea2-3.out  aa31e96f5871885613d385157c61bbbfb16350f5-1.out  aa31e96f5871885613d385157c61bbbfb16350f5-2.out  aa31e96f5871885613d385157c61bbbfb16350f5-3.out  (+40 more)
