name:                pulp
version:             0.0
synopsis:            process your LaTeX log file and make a better paper
-- description:         
homepage:            http://dmwit.com/pulp
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          daniel@wagner-home.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable pulp
  main-is:             pulp.hs
  build-depends:       base >=4 && <5,
                       void >=0 && <1,
                       regex-posix >= 0.95 && <0.96
  ghc-options:         -O2
