name:                pulp
version:             0.0
synopsis:            process your LaTeX log file and make a better paper
-- description:         
homepage:            http://dmwit.com/pulp
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          daniel@wagner-home.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.Pulp
  build-depends:       base >=4 && <5,
                       mtl  >=2 && <3,
                       void >=0 && <1,
                       regex-posix >=0.95 && <0.96
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -O2

executable pulp
  main-is:             pulp.hs
  other-modules:       Config
  build-depends:       base >=4 && <5,
                       mtl >=2 && <3,
                       pulp ==0.0,
                       regex-posix >=0.95 && <0.96,
                       universe-reverse-instances >=1.0 && <1.1
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -O2

test-suite regression
  type:                detailed-0.9
  test-module:         Regression
  build-depends:       base >=4 && <5,
                       Cabal >=1.18 && <1.19,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       pulp ==0.0,
                       strict >=0.3 && <0.4
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -O2
